Error: Add runtime-error exception, `Params` errors will `throw` now
This is needed in the future as we can display errors to GUI or output
or writing to Log.  `catch()` during runtime is deciding which of them
will be done.

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,6 +16,6 @@
 
 
 OUTPUT := socialmedia-signer
-OBJ := Common ustr Log Params main
+OBJ := Common ustr Log Error Params main
 
 include ../makeinc/makefile.inc.mk
