Architecture: Add classes Image, SignedData, IPlatform and App (fast commit)

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,6 +16,6 @@
 
 
 OUTPUT := socialmedia-signer
-OBJ := Common ustr Log Error Params main
+OBJ := Common ustr Log Error Params Image SignedData App main
 
 include ../makeinc/makefile.inc.mk
